--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
           <h2 class="visually-hidden">Characteristic</h2>
           <ul class="characteristic-list">
             <li class="characteristic-item">
+              <svg class="characteristic-icons" width="64" height="64">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
               <h3 class="characteristic-subtitle">Strategy</h3>
               <p class="characteristic-desc">
                 Our goal is to identify the business problem to walk away with
@@ -74,6 +77,9 @@
               </p>
             </li>
             <li class="characteristic-item">
+              <svg class="characteristic-icons" width="64" height="64">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
               <h3 class="characteristic-subtitle">Punctuality</h3>
               <p class="characteristic-desc">
                 Bring the key message to the brand's audience for the best price
@@ -81,6 +87,9 @@
               </p>
             </li>
             <li class="characteristic-item">
+              <svg class="characteristic-icons" width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
               <h3 class="characteristic-subtitle">Diligence</h3>
               <p class="characteristic-desc">
                 Research and confirm brands with the strongest digital growth
@@ -88,6 +97,9 @@
               </p>
             </li>
             <li class="characteristic-item">
+              <svg class="characteristic-icons" width="64" height="64">
+                <use href="./images/icons.svg#con-astronaut"></use>
+              </svg>
               <h3 class="characteristic-subtitle">Technologies</h3>
               <p class="characteristic-desc">
                 Design practice focused on digital experiences. We bring forth a
@@ -112,6 +124,18 @@
                 <h3 class="team-subtitle">Mark Guerrero</h3>
                 <p class="team-desc">Product Designer</p>
               </div>
+              <svg class="team-item-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+              <svg class="team-item-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+              <svg class="team-item-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+              <svg class="team-item-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
             </li>
             <li class="team-item">
               <img
@@ -124,6 +148,18 @@
                 <h3 class="team-subtitle">Tom Ford</h3>
                 <p class="team-desc">Frontend Developer</p>
               </div>
+              <svg class="team-item-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+              <svg class="team-item-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+              <svg class="team-item-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+              <svg class="team-item-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
             </li>
             <li class="team-item">
               <img
@@ -136,6 +172,18 @@
                 <h3 class="team-subtitle">Camila Garcia</h3>
                 <p class="team-desc">Marketing</p>
               </div>
+              <svg class="team-item-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
+              <svg class="team-item-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+              <svg class="team-item-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+              <svg class="team-item-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
             </li>
             <li class="team-item">
               <img
@@ -148,6 +196,18 @@
                 <h3 class="team-subtitle">Daniel Wilson</h3>
                 <p class="team-desc">UI Designer</p>
               </div>
+              <svg class="team-item-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+              <svg class="team-item-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+              <svg class="team-item-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+              <svg class="team-item-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
             </li>
           </ul>
         </div>
@@ -241,6 +301,39 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+      <div class="container footer-icons">
+        <p class="footer-text">Social media</p>
+        <ul class="footer-icons-list">
+          <li class="footer-icons-item">
+            <a href="#" class="footer-icons-link">
+              <svg class="footer-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-icons-item">
+            <a href="#" class="footer-icons-link">
+              <svg class="footer-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-icons-item">
+            <a href="#" class="footer-icons-link">
+              <svg class="footer-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-icons-item">
+            <a href="#" class="footer-icons-link">
+              <svg class="footer-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
