--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </li>
             <li class="characteristic-item">
               <svg class="characteristic-icons" width="64" height="64">
-                <use href="./images/icons.svg#con-astronaut"></use>
+                <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>
               <h3 class="characteristic-subtitle">Technologies</h3>
               <p class="characteristic-desc">
@@ -120,22 +120,34 @@
                 alt="Mark Guerrero"
                 width="264"
               />
-              <div class="team-container-list">
-                <h3 class="team-subtitle">Mark Guerrero</h3>
-                <p class="team-desc">Product Designer</p>
+              <div class="team-part">
+                <div class="team-container-list">
+                  <h3 class="team-subtitle">Mark Guerrero</h3>
+                  <p class="team-desc">Product Designer</p>
+                </div>
+                <div class="team-icons">
+                  <a href="#" class="team-icon-link">
+                    <svg class="team-item-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="#" class="team-icon-link">
+                    <svg class="team-item-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="#" class="team-icon-link">
+                    <svg class="team-item-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="#" class="team-icon-link">
+                    <svg class="team-item-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
-              <svg class="team-item-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-              <svg class="team-item-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-              <svg class="team-item-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-              <svg class="team-item-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
             </li>
             <li class="team-item">
               <img
@@ -144,22 +156,34 @@
                 alt="Tom Ford"
                 width="264"
               />
+              <div class="team-part">
               <div class="team-container-list">
                 <h3 class="team-subtitle">Tom Ford</h3>
                 <p class="team-desc">Frontend Developer</p>
               </div>
-              <svg class="team-item-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-              <svg class="team-item-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-              <svg class="team-item-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-              <svg class="team-item-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
+              <div class="team-icons">
+                <a href="#" class="team-icon-link">
+                  <svg class="team-item-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a href="#" class="team-icon-link">
+                  <svg class="team-item-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a href="#" class="team-icon-link">
+                  <svg class="team-item-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a href="#" class="team-icon-link">
+                  <svg class="team-item-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </div>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -168,22 +192,33 @@
                 alt="Camila Garcia"
                 width="264"
               />
+              <div class="team-part">
               <div class="team-container-list">
                 <h3 class="team-subtitle">Camila Garcia</h3>
                 <p class="team-desc">Marketing</p>
               </div>
-              <svg class="team-item-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
-              <svg class="team-item-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-              <svg class="team-item-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-              <svg class="team-item-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
+              <div class="team-icons">
+                <a href="#" class="team-icon-link">
+                  <svg class="team-item-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a href="#" class="team-icon-link">
+                  <svg class="team-item-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a href="#" class="team-icon-link">
+                  <svg class="team-item-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a href="#" class="team-icon-link">
+                  <svg class="team-item-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -192,22 +227,34 @@
                 alt="Daniel Wilson"
                 width="264"
               />
+              <div class="team-part">
               <div class="team-container-list">
                 <h3 class="team-subtitle">Daniel Wilson</h3>
                 <p class="team-desc">UI Designer</p>
               </div>
-              <svg class="team-item-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-              <svg class="team-item-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-              <svg class="team-item-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-              <svg class="team-item-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
+              <div class="team-icons">
+                <a href="#" class="team-icon-link">
+                  <svg class="team-item-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a href="#" class="team-icon-link">
+                  <svg class="team-item-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a href="#" class="team-icon-link">
+                  <svg class="team-item-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a href="#" class="team-icon-link">
+                  <svg class="team-item-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </div>
+              </div>
             </li>
           </ul>
         </div>
