--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
           <a class="header-logo" href="./index.html"
             >Web<span class="header-logo-studio">Studio</span></a
           >
-
           <ul class="header-menu-list">
             <li class="header-menu-item">
-              <a class="header-menu-link" href="./index.html">Studio</a>
+              <a class="header-menu-link header-link" href="./index.html">Studio</a>
             </li>
             <li class="header-menu-item">
               <a class="header-menu-link" href="">Portfolio</a>
