--- a/index.html
+++ b/index.html
@@ -263,72 +263,90 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
+              <div class="portfolio-item-cover">
               <img
                 class="portfolio-img"
                 src="./images/img-banking-app.jpg"
                 alt="banking-app"
                 width="360"
               />
-              <div class="portfolio-subtitle-desc">
+             <p class="portfolio-item-text "> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+             </div>
+             <div class="portfolio-subtitle-desc">
                 <h3 class="portfolio-subtitle">Banking App</h3>
                 <p class="portfolio-desc">App</p>
               </div>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-item-cover">
               <img
                 class="portfolio-img"
                 src="./images/img-cashless-payment.jpg"
                 alt="cashless-payment"
                 width="360"
               />
+              <p class="portfolio-item-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-subtitle-desc">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
                 <p class="portfolio-desc">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-item-cover">
               <img
                 class="portfolio-img"
                 src="./images/img-laptop-and-phone.jpg"
                 alt="laptop-and-phone"
                 width="360"
               />
+              <p class="portfolio-item-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-subtitle-desc">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
                 <p class="portfolio-desc">App</p>
               </div>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-item-cover">
               <img
                 class="portfolio-img"
                 src="./images/img-driving.jpg"
                 alt="driving"
                 width="360"
               />
+              <p class="portfolio-item-text" >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-subtitle-desc">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
                 <p class="portfolio-desc">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-item-cover">
               <img
                 class="portfolio-img"
                 src="./images/img-phone.jpg"
                 alt="Screen Illustrations"
                 width="360"
               />
+              <p class="portfolio-item-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-subtitle-desc">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                 <p class="portfolio-desc">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-item-cover">
               <img
                 class="portfolio-img"
                 src="./images/img-smiling-girl.jpg"
                 alt="smiling-girl"
                 width="360"
               />
+              <p class="portfolio-item-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-subtitle-desc">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
                 <p class="portfolio-desc">Marketing</p>
