--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
           <h2 class="visually-hidden">Characteristic</h2>
           <ul class="characteristic-list">
             <li class="characteristic-item">
+              <div class="characteristic-icons-item">
               <svg class="characteristic-icons" width="64" height="64">
                 <use href="./images/icons.svg#icon-antenna"></use>
               </svg>
+              </div>
               <h3 class="characteristic-subtitle">Strategy</h3>
               <p class="characteristic-desc">
                 Our goal is to identify the business problem to walk away with
@@ -76,19 +78,23 @@
               </p>
             </li>
             <li class="characteristic-item">
+              <div class="characteristic-icons-item">
               <svg class="characteristic-icons" width="64" height="64">
                 <use href="./images/icons.svg#icon-clock"></use>
               </svg>
-              <h3 class="characteristic-subtitle">Punctuality</h3>
-              <p class="characteristic-desc">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
+              </div>
+              <h3  class="characteristic-subtitle">Punctuality</h3>
+                <p class="characteristic-desc">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
               </p>
             </li>
             <li class="characteristic-item">
+              <div class="characteristic-icons-item">
               <svg class="characteristic-icons" width="64" height="64">
                 <use href="./images/icons.svg#icon-diagram"></use>
               </svg>
+              </div>
               <h3 class="characteristic-subtitle">Diligence</h3>
               <p class="characteristic-desc">
                 Research and confirm brands with the strongest digital growth
@@ -96,9 +102,11 @@
               </p>
             </li>
             <li class="characteristic-item">
+              <div class="characteristic-icons-item">
               <svg class="characteristic-icons" width="64" height="64">
                 <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>
+              </div>
               <h3 class="characteristic-subtitle">Technologies</h3>
               <p class="characteristic-desc">
                 Design practice focused on digital experiences. We bring forth a
@@ -125,26 +133,36 @@
                   <p class="team-desc">Product Designer</p>
                 </div>
                 <div class="team-icons">
+                  <ul class="team-icons-list">
+                    <li class="icons-link">
                   <a href="#" class="team-icon-link">
                     <svg class="team-item-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram" class="icons-team-svg"></use>
                     </svg>
                   </a>
+                  </li>
+                  <li class="icons-link">
                   <a href="#" class="team-icon-link">
                     <svg class="team-item-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter" class="icons-team-svg"></use>
                     </svg>
                   </a>
+                  </li>
+                  <li class="icons-link">
                   <a href="#" class="team-icon-link">
                     <svg class="team-item-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook" class="icons-team-svg"></use>
                     </svg>
                   </a>
+                  </li>
+                  <li class="icons-link">
                   <a href="#" class="team-icon-link">
                     <svg class="team-item-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin" class="icons-team-svg"></use>
                     </svg>
                   </a>
+                  </li>
+                  </ul>
                 </div>
               </div>
             </li>
@@ -161,26 +179,36 @@
                 <p class="team-desc">Frontend Developer</p>
               </div>
               <div class="team-icons">
+                <ul class="team-icons-list">
+                  <li class="icons-link">
                 <a href="#" class="team-icon-link">
                   <svg class="team-item-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram" class="icons-team-svg"></use>
                   </svg>
                 </a>
+                </li>
+                <li class="icons-link">
                 <a href="#" class="team-icon-link">
                   <svg class="team-item-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter" class="icons-team-svg"></use>
                   </svg>
                 </a>
+                </li>
+                <li class="icons-link">
                 <a href="#" class="team-icon-link">
                   <svg class="team-item-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook" class="icons-team-svg"></use>
                   </svg>
                 </a>
+                </li>
+                <li class="icons-link">
                 <a href="#" class="team-icon-link">
                   <svg class="team-item-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin" class="icons-team-svg"></use>
                   </svg>
                 </a>
+                </li>
+                </ul>
               </div>
               </div>
             </li>
@@ -197,26 +225,36 @@
                 <p class="team-desc">Marketing</p>
               </div>
               <div class="team-icons">
+                <ul class="team-icons-list">
+                  <li class="icons-link">
                 <a href="#" class="team-icon-link">
                   <svg class="team-item-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram" class="icons-team-svg"></use>
                   </svg>
                 </a>
+                </li>
+                <li class="icons-link">
                 <a href="#" class="team-icon-link">
                   <svg class="team-item-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter" class="icons-team-svg"></use>
                   </svg>
                 </a>
+                </li>
+                <li class="icons-link">
                 <a href="#" class="team-icon-link">
                   <svg class="team-item-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook" class="icons-team-svg"></use>
                   </svg>
                 </a>
+                </li>
+                <li class="icons-link">
                 <a href="#" class="team-icon-link">
                   <svg class="team-item-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin" class="icons-team-svg"></use>
                   </svg>
                 </a>
+                 </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -232,26 +270,36 @@
                 <p class="team-desc">UI Designer</p>
               </div>
               <div class="team-icons">
+                <ul class="team-icons-list">
+                  <li class="icons-link">
                 <a href="#" class="team-icon-link">
                   <svg class="team-item-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram" class="icons-team-svg"></use>
                   </svg>
                 </a>
+                </li>
+                <li class="icons-link">
                 <a href="#" class="team-icon-link">
                   <svg class="team-item-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter" class="icons-team-svg"></use>
                   </svg>
                 </a>
+                </li>
+                <li class="icons-link">
                 <a href="#" class="team-icon-link">
                   <svg class="team-item-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook" class="icons-team-svg"></use>
                   </svg>
                 </a>
+                </li>
+                <li class="icons-link">
                 <a href="#" class="team-icon-link">
                   <svg class="team-item-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin" class="icons-team-svg"></use>
                   </svg>
                 </a>
+                </li>
+                </ul>
               </div>
               </div>
             </li>
@@ -357,7 +405,8 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container container-footer">
+        <div class="footer-logo-container">
         <a class="footer-logo" href="./index.html"
           >Web<span class="footer-logo-studio">Studio</span></a
         >
@@ -365,6 +414,7 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        </div>
       </div>
       <div class="container footer-icons">
         <p class="footer-text">Social media</p>
@@ -379,7 +429,7 @@
           <li class="footer-icons-item">
             <a href="#" class="footer-icons-link">
               <svg class="footer-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-twitter"></use>
+                <use href="./images/icons.svg#icon-twitter" class=""></use>
               </svg>
             </a>
           </li>
@@ -398,6 +448,7 @@
             </a>
           </li>
         </ul>
+        </div>
       </div>
     </footer>
   </body>
