--- a/index.html
+++ b/index.html
@@ -136,6 +136,132 @@
                   <li class="icons-link">
                     <a href="#" class="team-icon-link">
                       <svg class="team-item-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-link">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-item-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-link">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-item-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-link">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-item-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/img-2.jpg"
+                alt="Tom Ford"
+                width="264"
+              />
+              <div class="team-part">
+                <h3 class="team-subtitle">Tom Ford</h3>
+                <p class="team-desc">Frontend Developer</p>
+                <ul class="team-icons-list">
+                  <li class="icons-link">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-item-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-link">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-item-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-link">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-item-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-link">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-item-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/img-1.jpg"
+                alt="Camila Garcia"
+                width="264"
+              />
+              <div class="team-part">
+                <h3 class="team-subtitle">Camila Garcia</h3>
+                <p class="team-desc">Marketing</p>
+                <ul class="team-icons-list">
+                  <li class="icons-link">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-item-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-link">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-item-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-link">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-item-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-link">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-item-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/img.jpg"
+                alt="Daniel Wilson"
+                width="264"
+              />
+              <div class="team-part">
+                <h3 class="team-subtitle">Daniel Wilson</h3>
+                <p class="team-desc">UI Designer</p>
+                <ul class="team-icons-list">
+                  <li class="icons-link">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-item-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-instagram"
                           class="icons-team-svg"
@@ -174,174 +300,6 @@
                     </a>
                   </li>
                 </ul>
-              </div>
-            </li>
-            <li class="team-item">
-              <img
-                class="team-img"
-                src="./images/img-2.jpg"
-                alt="Tom Ford"
-                width="264"
-              />
-              <div class="team-part">
-                <h3 class="team-subtitle">Tom Ford</h3>
-                <p class="team-desc">Frontend Developer</p>
-                <div class="team-icons">
-                  <ul class="team-icons-list">
-                    <li class="icons-link">
-                      <a href="#" class="team-icon-link">
-                        <svg class="team-item-icon" width="16" height="16">
-                          <use
-                            href="./images/icons.svg#icon-instagram"
-                            class="icons-team-svg"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icons-link">
-                      <a href="#" class="team-icon-link">
-                        <svg class="team-item-icon" width="16" height="16">
-                          <use
-                            href="./images/icons.svg#icon-twitter"
-                            class="icons-team-svg"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icons-link">
-                      <a href="#" class="team-icon-link">
-                        <svg class="team-item-icon" width="16" height="16">
-                          <use
-                            href="./images/icons.svg#icon-facebook"
-                            class="icons-team-svg"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icons-link">
-                      <a href="#" class="team-icon-link">
-                        <svg class="team-item-icon" width="16" height="16">
-                          <use
-                            href="./images/icons.svg#icon-linkedin"
-                            class="icons-team-svg"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </li>
-            <li class="team-item">
-              <img
-                class="team-img"
-                src="./images/img-1.jpg"
-                alt="Camila Garcia"
-                width="264"
-              />
-              <div class="team-part">
-                <h3 class="team-subtitle">Camila Garcia</h3>
-                <p class="team-desc">Marketing</p>
-                <div class="team-icons">
-                  <ul class="team-icons-list">
-                    <li class="icons-link">
-                      <a href="#" class="team-icon-link">
-                        <svg class="team-item-icon" width="16" height="16">
-                          <use
-                            href="./images/icons.svg#icon-instagram"
-                            class="icons-team-svg"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icons-link">
-                      <a href="#" class="team-icon-link">
-                        <svg class="team-item-icon" width="16" height="16">
-                          <use
-                            href="./images/icons.svg#icon-twitter"
-                            class="icons-team-svg"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icons-link">
-                      <a href="#" class="team-icon-link">
-                        <svg class="team-item-icon" width="16" height="16">
-                          <use
-                            href="./images/icons.svg#icon-facebook"
-                            class="icons-team-svg"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icons-link">
-                      <a href="#" class="team-icon-link">
-                        <svg class="team-item-icon" width="16" height="16">
-                          <use
-                            href="./images/icons.svg#icon-linkedin"
-                            class="icons-team-svg"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </li>
-            <li class="team-item">
-              <img
-                class="team-img"
-                src="./images/img.jpg"
-                alt="Daniel Wilson"
-                width="264"
-              />
-              <div class="team-part">
-                <h3 class="team-subtitle">Daniel Wilson</h3>
-                <p class="team-desc">UI Designer</p>
-                <div class="team-icons">
-                  <ul class="team-icons-list">
-                    <li class="icons-link">
-                      <a href="#" class="team-icon-link">
-                        <svg class="team-item-icon" width="16" height="16">
-                          <use
-                            href="./images/icons.svg#icon-instagram"
-                            class="icons-team-svg"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icons-link">
-                      <a href="#" class="team-icon-link">
-                        <svg class="team-item-icon" width="16" height="16">
-                          <use
-                            href="./images/icons.svg#icon-twitter"
-                            class="icons-team-svg"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icons-link">
-                      <a href="#" class="team-icon-link">
-                        <svg class="team-item-icon" width="16" height="16">
-                          <use
-                            href="./images/icons.svg#icon-facebook"
-                            class="icons-team-svg"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icons-link">
-                      <a href="#" class="team-icon-link">
-                        <svg class="team-item-icon" width="16" height="16">
-                          <use
-                            href="./images/icons.svg#icon-linkedin"
-                            class="icons-team-svg"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
               </div>
             </li>
           </ul>
