add changes in footer and team

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
           </p>
         </div>
         <div class="footer-icons">
-          <p class="footer-text-media">Social media</p>
+          <p class="footer-text">Social media</p>
           <ul class="footer-icons-list">
             <li class="footer-icons-item">
               <a href="#" class="footer-icons-link">
